MDL-54687 messages: Fix height bug with auto-rows textarea
Firefox reserves height for the horizontal scroll bars in a textarea. This
mucks up the height calculations for this element. Prevent it with overflow-x.

--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -4917,3 +4917,7 @@ body.lockscroll {
     vertical-align: text-bottom;
     margin-bottom: 0;
 }
+
+textarea[data-auto-rows] {
+    overflow-x: hidden;
+}
