--- a/theme/bootstrapbase/less/moodle/forms.less
+++ b/theme/bootstrapbase/less/moodle/forms.less
@@ -718,3 +718,7 @@ input[size] {
     padding: 0.5em;
     font-size: large;
 }
+
+textarea[data-auto-rows] {
+    overflow-x: hidden;
+}
